# easy2d-mingw

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xmake.lua
.xmake/linux/x86_64/cache/: detect  history  toolchain
script/: ar.py
src/include/: mfapi.h
src/include/easy2d/: e2daction.h  e2dbase.h  e2dcommon.h  e2dmacros.h  e2dmanager.h  e2dmath.h  e2dnode.h  e2dshape.h  e2dtool.h  e2dtransition.h  easy2d.h
src/source/Action/: Animate.cpp  Animation.cpp  Delay.cpp  FiniteTimeAction.cpp  JumpBy.cpp  MoveBy.cpp  OpacityBy.cpp  RotateBy.cpp  ScaleBy.cpp  Sequence.cpp  Spawn.cpp
src/source/Base/: GC.cpp  Game.cpp  Input.cpp  Logger.cpp  Renderer.cpp  Time.cpp  Window.cpp
src/source/Common/: Font.cpp  Image.cpp  Object.cpp  String.cpp
src/source/Manager/: ActionManager.cpp  SceneManager.cpp
src/source/Math/: Matrix.cpp
src/source/Node/: Button.cpp  Menu.cpp  Node.cpp  Sprite.cpp  Text.cpp  ToggleButton.cpp
src/source/Tool/: Data.cpp  Music.cpp  MusicPlayer.cpp  Path.cpp  Timer.cpp
src/source/Transition/: Transition.cpp
